<resources>
    <string name="app_name">ColorViewerOntemu</string>
    <string name="detect">Detect</string>
    <string name="filter">Filter</string>
    <string name="simulation">Simulation</string>
    <string name="grading">Grading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="protanopia">Protanopia</string>
    <string name="deuteranopia">Deuteranopia</string>
    <string name="tritanopia">Tritanopia</string>
    <string-array name="color_blindness_types">
        <item>Normal Vision</item>
        <item>Protanopia</item>
        <item>Deuteranopia</item>
        <item>Tritanopia</item>
    </string-array>
</resources>