<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detect">

    <fragment
        android:id="@+id/navigation_detect"
        android:name="com.example.colorviewerontemu.ui.detect.DetectFragment"
        android:label="@string/detect"
        tools:layout="@layout/fragment_detect" />

    <fragment
        android:id="@+id/navigation_filter"
        android:name="com.example.colorviewerontemu.ui.filter.FilterFragment"
        android:label="@string/filter"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/navigation_simulation"
        android:name="com.example.colorviewerontemu.ui.simulation.SimulationFragment"
        android:label="@string/simulation"
        tools:layout="@layout/fragment_simulation" />

    <fragment
        android:id="@+id/navigation_grading"
        android:name="com.example.colorviewerontemu.ui.grading.GradingFragment"
        android:label="@string/grading"
        tools:layout="@layout/fragment_grading" />

</navigation>