<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.DetectFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="140dp">

        <androidx.camera.view.PreviewView
            android:id="@+id/pvPreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.opengl.GLSurfaceView
            android:id="@+id/glSurfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@color/black_transparent"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glSurfaceView" />

        <RelativeLayout
            android:id="@+id/fixMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/black_transparent"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/linearLayout"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ProFixButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/protanopia"
                    android:src="@drawable/baseline_filter_1_24" />

                <TextView
                    android:id="@+id/ProTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/protanopia"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/DeuFixButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/deuteranopia"
                    android:src="@drawable/baseline_filter_2_24" />

                <TextView
                    android:id="@+id/DeuTexView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/deuteranopia"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/linearLayout"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/TriFixButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/light_gray"
                    android:src="@drawable/baseline_filter_3_24" />

                <TextView
                    android:id="@+id/TriTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tritanopia"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/centerPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="+"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/changeFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Change Filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <!-- Initial Testing -->

<!--    <ToggleButton-->
<!--        android:id="@+id/fun_button"-->
<!--        android:layout_width="24dp"-->
<!--        android:layout_height="24dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/text_home"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/counter_text"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/text_home"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>